Fix background on mobile

--- a/css/app.less
+++ b/css/app.less
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   padding-top: 50px;
   background-image: url('/images/background.jpg');
